refactor(admin): optimize user fetching in AdminDashboard page
- Refactor the AdminService class to include a new method getPaginatedUsers() that retrieves users with pagination and sorting options.
- Update the AdminController class to use the new getPaginatedUsers() method when fetching users in the AdminDashboard page.
- Modify the AdminDashboard page component to include pagination and sorting functionality for the user table.